[package]
name = "atp"
version = "0.0.1"
edition = "2021"
description = "A command line tool for the Authenticated Transfer Protocol"
license = "MIT"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
directories = "5.0.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "fs"] }
toml = "0.8.19"
