[package]
name = "atp"
version = "0.0.1"
edition = "2021"
description = "A command line tool for the Authenticated Transfer Protocol"
license = "MIT"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
image = "0.25.5"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3.14.0"
textwrap = "0.16.1"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "fs"] }
toml = "0.8.19"
viuer = { version = "0.9.1", default-features = false, features = ["default"] }
