[package]
name = "atp"
version = "0.0.1"
edition = "2024"
description = "A command line tool for the Authenticated Transfer Protocol"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
colored = "2.2.0"
directories = "5.0.1"
image = "0.25.6"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
textwrap = "0.16.2"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "fs"] }
toml = "0.8.22"
viuer = { version = "0.9.1", default-features = false, features = ["default"] }
